Protocol source generation test

--- a/TemplatingLibCLI/TemplatingLibCLI.csproj
+++ b/TemplatingLibCLI/TemplatingLibCLI.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Field.cs" />
+    <Compile Include="Data\Module.cs" />
+    <Compile Include="Data\Type.cs" />
     <Compile Include="Messages\Field.cs" />
     <Compile Include="Messages\Message.cs" />
     <Compile Include="Messages\ProtocolLoader.cs" />
@@ -51,22 +54,42 @@
     <Compile Include="Messages\Type.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TemplateLibary.cs" />
+    <Compile Include="TestThing.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Templates\c_internal_parse_func.t">
+    <None Include="Templates\c_typedef_uintx.t">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Templates\c_parse_field.t">
+    <None Include="Templates\c_file.t">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Templates\c_parsing.t">
+    <None Include="Templates\c_read_call.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\blank.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\c_write_call_uint4.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\c_read_call_uint4.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\c_read_function.t">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Templates\c_struct.t">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Templates\c_typename.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\c_write_call.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\c_write_function.t">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
