--- a/TemplatingLibCLI/TemplatingLibCLI.csproj
+++ b/TemplatingLibCLI/TemplatingLibCLI.csproj
@@ -54,7 +54,9 @@
     <Compile Include="Messages\Type.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TemplateLibary.cs" />
+    <Compile Include="TemplateLibrary.cs" />
+    <Compile Include="TemplateLibrary\TypeTemplates.cs" />
+    <Compile Include="TemplateLibrary\TemplateLibrary.cs" />
     <Compile Include="TestThing.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +143,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="clib.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ptp.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
