--- a/TemplatingLibCLI/TemplatingLibCLI.csproj
+++ b/TemplatingLibCLI/TemplatingLibCLI.csproj
@@ -76,6 +76,30 @@
     <None Include="Templates\cs_read_function.t">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Templates\cs_typename_int64.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\cs_typename_int32.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\cs_typename_int16.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\cs_typename_int8.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\cs_typename_uint64.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\cs_typename_uint32.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\cs_typename_uint16.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Templates\cs_typename_uint8.t">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Templates\cs_typename.t">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
